В ответ с рассылкой добавлен канал получателя
