# docs/api/v1/smc_api_specification.json
@@ -282,6 +282,13 @@
               "type": "string"
             }
           },
+          "userChannel": {
+            "type": "string",
+            "enum": [
+              "user-channel",
+              "admin-channel"
+            ]
+          },
           "role": {
             "type": "string",
             "enum": [
